# skyedge-vtol-ws

./: CONTRIBUTING.md  README.md  setup.sh  shell.nix  sim.sh
.github/workflows/: build_check.yml  lint_check.yml
docker/: Dockerfile  docker-compose.yml  fastdds_localhost.xml  xrce_agent.Dockerfile
docs/: README.md  tdd_guide.md  test_spec.md  vtol_demo_quickstart.md
src/vtol_bringup/: package.xml
src/vtol_bringup/config/: global_params.yaml
src/vtol_bringup/launch/: sim_launch.py
src/vtol_comm_lte/: CMakeLists.txt  package.xml
src/vtol_comm_lte/src/: telemetry_node.py
src/vtol_control_nav/: CMakeLists.txt  README.md  package.xml
src/vtol_control_nav/src/: waypoint_nav_node.py
src/vtol_control_nav/src/mission_executor/: __init__.py  base.py
src/vtol_control_nav/src/precision_landing/: __init__.py  base.py
src/vtol_control_nav/src/trajectory_planners/: __init__.py  base.py  factory.py  mpc_planner.py  mpc_stub.py  simple.py
src/vtol_control_task/: CMakeLists.txt  package.xml
src/vtol_control_task/src/: precision_task_node.py
src/vtol_hw_gripper/: package.xml
src/vtol_hw_gripper/src/: arduino_cmd_node.py
src/vtol_vision_aruco/: CMakeLists.txt  package.xml
src/vtol_vision_aruco/src/: aruco_detect_node.py
src/vtol_vision_yolo/: CMakeLists.txt  package.xml
src/vtol_vision_yolo/src/: yolo_detect_node.py
test/: README.md  mock_ros2.py
test/contract/: test_node_entrypoints.py  test_spec_contract.py
test/integration/: README.md  test_tc003_takeoff.py  test_tc007_full_mission.py
test/unit/: test_comm_lte.py  test_control_task.py  test_hw_gripper.py  test_vision_aruco.py  test_vision_yolo.py  test_waypoint_nav.py
