<?xml version="1.0"?>
<package format="3">
  <name>vtol_bringup</name>
  <version>0.0.1</version>
  <description>VTOL 전체 실행 및 통합 관리 패키지 (총괄)</description>
  <maintainer email="team@vtol.dev">총괄</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>px4_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
