<?xml version="1.0"?>
<package format="3">
  <name>vtol_comm_lte</name>
  <version>0.0.1</version>
  <description>LTE 통신 및 GCS 상태 모니터링 패키지</description>
  <maintainer email="team@vtol.dev">통신B담당</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
