<?xml version="1.0"?>
<package format="3">
  <name>vtol_control_task</name>
  <version>0.0.1</version>
  <description>정밀 착륙 및 객체 추적 하강 제어 패키지</description>
  <maintainer email="team@vtol.dev">제어B담당</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>px4_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
