<?xml version="1.0"?>
<package format="3">
  <name>vtol_hw_gripper</name>
  <version>0.0.1</version>
  <description>아두이노 직렬 통신 및 집게발 제어 패키지</description>
  <maintainer email="team@vtol.dev">HWA담당</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
