<?xml version="1.0"?>
<package format="3">
  <name>vtol_vision_yolo</name>
  <version>0.0.1</version>
  <description>YOLO 객체 인식 패키지</description>
  <maintainer email="team@vtol.dev">비전A담당</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
